# Medousa

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  docker-compose.yml  history.txt
adapters/medousa-mcp-gateway/: Cargo.toml
adapters/medousa-mcp-gateway/src/: lib.rs  main.rs
adapters/medousa-mcp-gateway/src/mcp_gateway/: auth.rs  catalog.rs  mod.rs  policy_client.rs  registry.rs  server_config.rs  stdio_client.rs
adapters/medousa-slack/: Cargo.toml
adapters/medousa-slack/src/: main.rs
adapters/medousa-telegram/: Cargo.toml
adapters/medousa-telegram/src/: main.rs
adapters/medousa-whatsapp/: Cargo.toml
adapters/medousa-whatsapp/.cargo/: config.toml
adapters/medousa-whatsapp/src/: main.rs
apps/medousa-home/src-tauri/: .gitignore  Cargo.toml  Info.mobile.plist  Info.plist  build.rs  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/medousa-home/src-tauri/.cargo/: config.toml
apps/medousa-home/src-tauri/binaries/: .gitkeep
apps/medousa-home/src-tauri/capabilities/: browser-tab-webviews.json  default.json  mobile.json
apps/medousa-home/src-tauri/icons/: icon.icns
apps/medousa-home/src-tauri/ios-entitlements/: medousa-home_iOS.entitlements
apps/medousa-home/src-tauri/ios-live-activity/App/: MedousaLiveActivityBridge.swift  MedousaLiveActivityManager.swift  MedousaPushBackgroundHandler.swift  MedousaWidgetSnapshotStore.swift
apps/medousa-home/src-tauri/ios-live-activity/Shared/: MedousaWidgetSnapshot.swift  MedousaWorkAttributes.swift
apps/medousa-home/src-tauri/ios-live-activity/Widget/: Info.plist  MedousaHomeGlanceWidget.swift  MedousaLiveActivityTheme.swift  MedousaWorkWidget.entitlements  MedousaWorkWidget.swift  (+1 more)
apps/medousa-home/src-tauri/src/: autostart.rs  badge.rs  browser_host.rs  browser_host_mobile.rs  browser_webview.rs  capabilities.rs  channel_adapters.rs  composer_stt.rs  connection_prefs.rs  daemon_service.rs  external_desk.rs  files.rs  home_widget.rs  human_browser.rs  human_browser_android.rs  human_browser_ios.rs  human_browser_mobile.rs  ios_push_setup.rs  lan_share.rs  lib.rs  live_activity.rs  local_engine.rs  main.rs  mcp_gateway.rs  medousa_paths.rs  packages.rs  pairing.rs  pairing_client.rs  paths.rs  peer_inbox_sink.rs  provider_catalog.rs  providers.rs  push.rs  tray.rs  window.rs  wizard.rs  workshop_registry.rs  workshop_runtime.rs  workshop_transport.rs
apps/medousa-installer/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/medousa-installer/src-tauri/.cargo/: config.toml
apps/medousa-installer/src-tauri/capabilities/: default.json
apps/medousa-installer/src-tauri/src/: embedded_release.rs  install.rs  lib.rs  main.rs
crates/medousa-acp-client/: Cargo.toml
crates/medousa-acp-client/src/: lib.rs
crates/medousa-adapter-common/: Cargo.toml
crates/medousa-adapter-common/src/: adapter_ingest.rs  channel_format.rs  ingest_stream.rs  lib.rs
crates/medousa-browser-bridge/: Cargo.toml
crates/medousa-browser-bridge/src/: lib.rs  manager.rs  model.rs
crates/medousa-browser-lite/: Cargo.toml
crates/medousa-browser-lite/src/: cache.rs  challenge.rs  fetch.rs  lib.rs  search.rs
crates/medousa-browser-lite/testdata/: ddg_sample.html
crates/medousa-engine/: Cargo.toml
crates/medousa-engine/src/: engine.rs  lib.rs  ports.rs  receipt.rs  scratch.rs  stream_sink.rs  turn_event.rs  turn_event_log.rs
crates/medousa-host/: Cargo.toml
crates/medousa-host/src/: lib.rs  spawn.rs
crates/medousa-install-support/: Cargo.toml
crates/medousa-install-support/src/: lib.rs  manifest.rs  model_catalog.rs  model_download.rs  packages.rs  paths.rs  release_config.rs  tarball_install.rs
crates/medousa-local-engine/: Cargo.toml
crates/medousa-local-engine/src/: engine.rs  lib.rs
crates/medousa-local-inference/: Cargo.toml
crates/medousa-local-inference/src/: backends.rs  catalog.rs  engine.rs  hardware.rs  lib.rs  paths.rs  process.rs  store.rs
crates/medousa-mcp-server/: Cargo.toml
crates/medousa-mcp-server/src/: lib.rs  main.rs
crates/medousa-sdk/: Cargo.toml
crates/medousa-sdk-iroh/: Cargo.toml
crates/medousa-sdk-iroh/src/: iroh_hook.rs  lib.rs  pool.rs  route.rs  workshop.rs
crates/medousa-sdk/src/: agents.rs  budget.rs  calendar.rs  capabilities.rs  client.rs  components.rs  environment.rs  error.rs  feeds.rs  health.rs  http.rs  interactive.rs  jobs.rs  lib.rs  local.rs  manuscripts.rs  mcp_gateway.rs  reconnect.rs  reconnecting_stream.rs  recurring.rs  runtime.rs  sessions.rs  streaming.rs  transport.rs  vault.rs  workspace.rs
crates/medousa-sdk/src/blocking/: client.rs  mod.rs
crates/medousa-sdk/src/local/: blocking.rs
crates/medousa-sdk/tests/: contract_parity.rs  mock_transport.rs
crates/medousa-types/: Cargo.toml
crates/medousa-types-schema/: Cargo.toml
crates/medousa-types-schema/src/: main.rs
crates/medousa-types/src/: capability.rs  component_runtime.rs  component_store.rs  daemon_api.rs  environment.rs  environment_default.rs  environment_icons.rs  environment_themes.rs  environment_validate.rs  feed.rs  grapheme_extras.rs  inference.rs  layout.rs  lib.rs  local.rs  mcp_gateway.rs  mcp_gateway_api.rs  mcp_turn_token.rs  model_catalog.rs  profile.rs  session.rs  stage_routing.rs  tool_history.rs  turn.rs  turn_ticket.rs  workflow.rs  workflow_plan.rs
python/medousa-sdk/: README.md  pyproject.toml
python/medousa-sdk/src/medousa/: __init__.py  _decode.py  _paths.py  agents.py  budget.py  calendar.py  capabilities.py  client.py  components.py  environment.py  error.py  feeds.py  health.py  http.py  ingest.py  interactive.py  jobs.py  local_models.py  mcp_gateway.py  reconnect.py  recurring.py  runtime.py  sessions.py  streaming.py  sync.py  transport.py  vault.py  workspace.py
python/medousa-sdk/tests/: mock_transport.py  test_health.py  test_ingest.py  test_interactive_stream.py  test_parity_paths.py  test_reconnect.py  test_runtime_artifacts.py  test_sync_workshop.py
(+1910 files in other folders)
