[package]
name = "medousa"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["."]

[[bin]]
name = "medousa_cli"
path = "src/bin/medousa_cli.rs"

[[bin]]
name = "medousa"
path = "src/bin/medousa.rs"

[[bin]]
name = "medousa_daemon"
path = "src/bin/medousa_daemon.rs"

[[bin]]
name = "medousa_tui"
path = "src/bin/medousa_tui.rs"

[[bin]]
name = "medousa_telegram"
path = "src/bin/medousa_telegram.rs"

[[bin]]
name = "medousa_discord"
path = "src/bin/medousa_discord.rs"

[[bin]]
name = "medousa_slack"
path = "src/bin/medousa_slack.rs"

[[bin]]
name = "medousa_mcp_gateway"
path = "src/bin/medousa_mcp_gateway.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
stasis-rs = { version = "0.3.0"}
stasis-rs-macros = { version = "0.1.0"}
genai = "0.5.3"
keyring = "2.3"
locus-core-rs = "0.3"
teloxide = "0.17.0"
telegram-escape = "0.4.0"
serenity = "0.12.5"
slack-morphism = { version = "2.22", default-features = false, features = ["hyper"] }
once_cell = "1"
surrealdb-types = { version = "3" }
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv", "rustls", "kv-mem", "protocol-ws"] }
toml = "0.8"
libc = "0.2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
