[package]
name = "medousa"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EntasisLabs/Medousa"
homepage = "https://github.com/EntasisLabs/Medousa"
description = "Permanent AI workspace — Medousa Engine and related crates"

[workspace]
members = [
    ".",
    "crates/medousa-types",
    "crates/medousa-types-schema",
    "crates/medousa-engine",
    "crates/medousa-sdk",
    "crates/medousa-sdk-iroh",
    "crates/medousa-iroh-http",
    "crates/medousa-local-engine",
    "crates/medousa-local-inference",
    "crates/medousa-host",
    "crates/medousa-browser-lite",
    "crates/medousa-browser-bridge",
    "crates/medousa-install-support",
]
exclude = ["apps/medousa-home/src-tauri", "apps/medousa-installer/src-tauri"]

[[bin]]
name = "medousa_cli"
path = "src/bin/medousa_cli.rs"

[[bin]]
name = "medousa"
path = "src/bin/medousa.rs"

[[bin]]
name = "medousa_daemon"
path = "src/bin/medousa_daemon.rs"

[[bin]]
name = "medousa_tui"
path = "src/bin/medousa_tui.rs"

[[bin]]
name = "medousa_telegram"
path = "src/bin/medousa_telegram.rs"

[[bin]]
name = "medousa_discord"
path = "src/bin/medousa_discord.rs"

[[bin]]
name = "medousa_slack"
path = "src/bin/medousa_slack.rs"

[[bin]]
name = "medousa_mcp_gateway"
path = "src/bin/medousa_mcp_gateway.rs"

[dependencies]
medousa-types = { path = "crates/medousa-types" }
medousa-install-support = { path = "crates/medousa-install-support" }
medousa-engine = { path = "crates/medousa-engine" }
medousa-host = { path = "crates/medousa-host" }
medousa-sdk = { path = "crates/medousa-sdk" }
medousa-browser-lite = { path = "crates/medousa-browser-lite" }
medousa-local-inference = { path = "crates/medousa-local-inference" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync", "fs", "io-util"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["multipart", "ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream", "blocking"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
stasis-rs = { version = "0.7.1", features = ["otel", "grapheme-full"] }
grapheme-sdk = "0.6.1"
grapheme-compiler = "0.6.1"
grapheme-runtime = "0.6.1"
grapheme-lsp = "0.6.1"
stasis-rs-macros = { version = "0.1.0"}
schemars = "0.8"
genai = "0.6.5"
keyring = "2.3"
locus-core-rs = "0.4.2"
teloxide = "0.17.0"
telegram-escape = "0.4.0"
serenity = "0.12.5"
slack-morphism = { version = "2.22", default-features = false, features = ["hyper"] }
once_cell = "1"
surrealdb-types = { version = "3" }
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv", "rustls", "kv-mem", "protocol-ws"] }
toml = "0.8"
serde_yaml = "0.9"
libc = "0.2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
qrcode = "0.14"
a2 = { version = "0.10", default-features = false, features = ["ring"] }
mdns-sd = "0.11"
chacha20poly1305 = { version = "0.10", features = ["std"] }
urlencoding = "2"
sysinfo = "0.33"
fs2 = "0.4"
calamine = "0.26"
pdf-extract = "0.7"
iroh = { version = "1.0", optional = true }
iroh-tickets = { version = "1.0", optional = true }
httparse = { version = "1", optional = true }
medousa-iroh-http = { path = "crates/medousa-iroh-http", optional = true }
tower = { version = "0.5", features = ["util", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[features]
default = []
otel-export = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]
iroh-transport = ["dep:iroh", "dep:iroh-tickets", "dep:httparse", "dep:medousa-iroh-http"]

[dev-dependencies]
surrealdb-types = { version = "3" }
surrealdb = { version = "3", default-features = false, features = ["kv-mem"] }

# --- Local iteration speed -------------------------------------------------
# Debug info generation + dsymutil + linking dominate build time on a workspace
# this dependency-heavy. Keep line tables (backtraces still work) but drop the
# heavy DWARF, never emit debuginfo for dependencies, and skip dsymutil on macOS.
# These only affect the dev/test profile — release/shipped binaries are untouched.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[patch.crates-io]
grapheme-runtime = { path = "vendor/grapheme-runtime" }
grapheme-sdk = { path = "vendor/grapheme-sdk" }
