[package]
name = "medousa-mcp-gateway"
version = "0.4.1"
edition = "2024"
description = "MCP Client gateway for Medousa"

[[bin]]
name = "medousa_mcp_gateway"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
medousa-types = { path = "../../crates/medousa-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync", "process", "io-util"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
