[package]
name = "medousa-slack"
version = "0.4.1"
edition = "2024"

[[bin]]
name = "medousa_slack"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs = "5"
keyring = "2.3"
medousa-adapter-common = { path = "../../crates/medousa-adapter-common" }
medousa-sdk = { path = "../../crates/medousa-sdk" }
medousa-types = { path = "../../crates/medousa-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
slack-morphism = { version = "2.22", default-features = false, features = ["hyper"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "sync"] }
