[package]
name = "medousa-acp-client"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ACP client bones — Home chat talks to external agentic runtimes (Cursor, Codex)"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
