[package]
name = "medousa-adapter-common"
version = "0.4.1"
edition = "2024"
description = "Shared ingest delivery helpers for Medousa channel adapters"

[dependencies]
anyhow = "1"
futures-util = "0.3"
medousa-types = { path = "../medousa-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
telegram-escape = "0.4.0"
tokio = { version = "1", features = ["time"] }
