[package]
name = "medousa-browser-bridge"
version = "0.4.0"
edition = "2021"
description = "Shared browser tab group model and session driver for Medousa BrowserHost"

[dependencies]
medousa-browser-lite = { path = "../medousa-browser-lite" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
