[package]
name = "medousa-browser-lite"
version = "0.4.1"
edition = "2024"
description = "Shared DuckDuckGo HTML lite search, challenge detection, and cache for Agent Browser Host"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
regex = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
