[package]
name = "medousa-engine"
version = "0.3.2"
edition = "2024"
description = "Medousa turn engine: typed events, durable spine, and outbound ports"

[dependencies]
medousa-types = { path = "../medousa-types" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
