[package]
name = "medousa-host"
version = "0.3.2"
edition = "2024"
description = "Host OS utilities for Medousa (process spawn, binary resolution)"

[dependencies]
medousa-types = { path = "../medousa-types" }
dirs = "5"
tokio = { version = "1", features = ["time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
