[package]
name = "medousa-install-support"
version = "0.1.0"
edition = "2024"
description = "Install manifests, package catalog, and model downloads for Medousa Installer (no engine deps)"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
