[package]
name = "medousa-local-inference"
version = "0.4.0"
edition = "2024"
description = "Local inference catalog/hardware/engine logic and the standalone medousa_local offline-brain binary (isolated from the medousa app crate)"

[[bin]]
name = "medousa_local"
path = "src/bin/medousa_local.rs"

[dependencies]
medousa-types = { path = "../medousa-types" }
medousa-host = { path = "../medousa-host" }
medousa-install-support = { path = "../medousa-install-support" }
medousa-local-engine = { path = "../medousa-local-engine", optional = true }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
fs2 = "0.4"
dirs = "5"

[features]
default = []
embedded-inference = ["dep:medousa-local-engine"]
embedded-inference-metal = ["embedded-inference", "medousa-local-engine/metal"]
embedded-inference-cuda = ["embedded-inference", "medousa-local-engine/cuda"]
