[package]
name = "medousa-mcp-server"
version = "0.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Medousa MCP server bones — expose vault/calendar/artifacts to external agent runtimes (deny spawn/turns)"

[[bin]]
name = "medousa_mcp_server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
