[package]
name = "medousa-sdk"
version = "0.1.0"
edition = "2024"
description = "HTTP client SDK for the Medousa daemon API"

[features]
default = ["async", "blocking"]
async = ["dep:tokio", "dep:reqwest"]
blocking = ["dep:reqwest"]
sse = ["async", "dep:futures-util", "dep:eventsource-stream"]

[dependencies]
medousa-types = { path = "../medousa-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"], optional = true }
futures-util = { version = "0.3", optional = true }
eventsource-stream = { version = "0.2", optional = true }
