[package]
name = "medousa-types"
version = "0.4.1"
edition = "2024"
description = "Shared Medousa daemon API types (serde DTOs)"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", optional = true, features = ["chrono"] }

[features]
default = []
json-schema = ["dep:schemars"]
