[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medousa-sdk"
version = "0.1.0"
description = "Python HTTP client for the Medousa daemon API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Entasis Labs" }]
keywords = ["medousa", "agent", "daemon", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "pyyaml>=6.0",
  "datamodel-code-generator>=0.25",
]

[project.urls]
Documentation = "https://github.com/EntasisLabs/Medousa/tree/main/Medousa/docs/sdk/python.md"
Repository = "https://github.com/EntasisLabs/Medousa"

[tool.hatch.build.targets.wheel]
packages = ["src/medousa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/medousa/types/_generated/**" = ["E501"]

