[workspace]

[package]
name = "medousa-home"
version = "0.1.1"
description = "Medousa desktop app (Tauri)"
authors = ["Entasis Labs"]
edition = "2021"

[lib]
name = "medousa_home_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
dirs = "6"
toml = "0.8"
keyring = "2.3"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
bytes = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
medousa = { path = "../../../", default-features = false, features = ["iroh-transport"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
tauri-plugin-ios-webview-insets = "0.1"

[patch.crates-io]
grapheme-runtime = { path = "../../../vendor/grapheme-runtime" }
grapheme-sdk = { path = "../../../vendor/grapheme-sdk" }
