[workspace]

[package]
name = "medousa-home"
version = "0.3.2"
description = "Medousa desktop app (Tauri)"
authors = ["Entasis Labs"]
edition = "2021"

[lib]
name = "medousa_home_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-mobile-push = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
dirs = "6"
toml = "0.8"
keyring = "2.3"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
bytes = "1"
url = "2"
medousa-types = { path = "../../../crates/medousa-types" }
medousa-sdk = { path = "../../../crates/medousa-sdk", default-features = false, features = ["async", "sse"] }
medousa-sdk-iroh = { path = "../../../crates/medousa-sdk-iroh", default-features = false, features = ["async", "sse"] }
medousa-iroh-http = { path = "../../../crates/medousa-iroh-http" }
medousa-browser-lite = { path = "../../../crates/medousa-browser-lite" }
medousa-install-support = { path = "../../../crates/medousa-install-support" }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
medousa-host = { path = "../../../crates/medousa-host" }
axum = "0.8"
medousa-browser-bridge = { path = "../../../crates/medousa-browser-bridge" }
tauri-plugin-window-state = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes", "objc2"] }
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSURL",
  "NSURLRequest",
  "NSGeometry",
  "NSDate",
  "NSRunLoop",
  "NSObjCRuntime",
  "objc2-core-foundation",
] }
objc2-ui-kit = { version = "0.3", features = [
  "UIView",
  "UIViewController",
  "UIWindow",
  "UIApplication",
] }
tauri-plugin-ios-webview-insets = "0.1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
gdk = "0.18"
gtk = "0.18"
webkit2gtk = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSObjCRuntime", "NSString"] }
objc2-app-kit = { version = "0.3", features = [
  "NSView",
  "NSWindow",
  "NSGraphics",
  "NSScrollView",
  "NSClipView",
  "NSEvent",
  "NSApplication",
  "NSResponder",
  "block2",
] }

# Faster `tauri dev` iteration: keep backtraces, drop heavy debug info + dsymutil.
# Only affects dev/test — release bundles are untouched.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[patch.crates-io]
grapheme-runtime = { path = "../../../vendor/grapheme-runtime" }
grapheme-sdk = { path = "../../../vendor/grapheme-sdk" }
# Upstream Package.swift declares iOS 13 but uses UNNotificationPresentationOptions.banner/.list (iOS 14+).
tauri-plugin-mobile-push = { path = "../../../vendor/tauri-plugin-mobile-push" }
