[workspace]

[package]
name = "medousa-installer"
version = "0.3.2"
description = "Medousa VS-style bootstrapper"
authors = ["Entasis Labs"]
edition = "2021"

[lib]
name = "medousa_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
medousa-install-support = { path = "../../../crates/medousa-install-support" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
sha2 = "0.10"
dirs = "6"
tar = "0.4"
flate2 = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Faster `tauri dev` iteration: keep backtraces, drop heavy debug info + dsymutil.
# Only affects dev/test — release bundles are untouched.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false
